--- a/src/app/color-section/color-section.component.html
+++ b/src/app/color-section/color-section.component.html
@@ -1,1 +1,1 @@
-<div [ngStyle]="{backgroundColor: color}"><ng-content></ng-content></div>
+<div class="section" [ngStyle]="{backgroundColor: color}"></div>
