--- a/src/app/password-strength/password-strength.component.html
+++ b/src/app/password-strength/password-strength.component.html
@@ -1,4 +1,8 @@
-<input [(ngModel)]="password" (ngModelChange)="onPasswordChange()">
-<app-color-section [color]="color1">First section</app-color-section>
-<app-color-section [color]="color2">Second section</app-color-section>
-<app-color-section [color]="color3">Third section</app-color-section>
+<div class="password-block">
+  <label>Input Password:</label>
+  <br>
+  <input [(ngModel)]="password" (input)="onPasswordChange()">
+  <app-color-section [color]="color1"></app-color-section>
+  <app-color-section [color]="color2"></app-color-section>
+  <app-color-section [color]="color3"></app-color-section>
+</div>
