--- a/src/app/password-strength/password-strength.component.html
+++ b/src/app/password-strength/password-strength.component.html
@@ -1,8 +1,7 @@
 <div class="password-block">
   <label>Input Password:</label>
-  <br>
   <input [(ngModel)]="password" (input)="onPasswordChange()">
-  <app-color-section [color]="color1"></app-color-section>
-  <app-color-section [color]="color2"></app-color-section>
-  <app-color-section [color]="color3"></app-color-section>
+  <app-color-section [color]="color1"/>
+  <app-color-section [color]="color2"/>
+  <app-color-section [color]="color3"/>
 </div>
